--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Flask>=2.3.0
-Flask-SQLAlchemy>=3.0.0
-Flask-Login>=0.6.0
-Flask-SocketIO>=5.3.0
-python-socketio>=5.9.0
-python-engineio>=4.7.0
-Werkzeug>=2.3.0
-python-dotenv>=1.0.0
-PyJWT>=2.8.0
-bcrypt>=4.0.0
-requests>=2.31.0
-docker>=6.1.0
-websocket-client>=1.6.0
-gunicorn>=21.2.0
-eventlet>=0.33.3
-psycopg2-binary>=2.9.6
-
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.3
+Flask-SocketIO==5.3.6
+python-socketio==5.11.2
+python-engineio==4.10.1
+Werkzeug==3.0.4
+python-dotenv==1.0.1
+PyJWT==2.8.0
+bcrypt==4.2.0
+requests==2.32.3
+docker==7.1.0
+websocket-client==1.8.0
+gevent==24.2.1
+gevent-websocket==0.10.1
+gunicorn==23.0.0
+psycopg2-binary==2.9.9
