--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ bcrypt==4.2.0
 requests==2.32.3
 docker==7.1.0
 websocket-client==1.8.0
-gevent==22.10.2
+gevent>=23.10.2
 gevent-websocket==0.10.1
 Cython==0.29.36
 
